style.css
/*------------
    RESET
------------*/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/*------------
   HEADER
------------*/

header {
    height: 25px;
    background-color: #000000;
}

header div {
    display: flex;
    justify-content: end;
}

header button {
    border-radius: 5px;
    padding: 3px 1px;
    color: white;
    background-color: #4a4a4a;
}

.fa-grip {
    padding-right: 5px;
}

#speaker {
    margin-right: 5px;
}

/*------------
    MAIN
------------*/

main {
    overflow: auto;
    padding-top: 20px;
    background-color: #000000;
    height: calc(100vh - 95px);
}

.container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.window {
    width: 193px;
    position: relative;
}

img {
    width: 99%;
}

.tag {
    padding: 2px 0px;
    font-size: 13px;
    position: absolute;
    left: 0;
    bottom: 5px;
    background-color: #61717e;
    color: white;
}

/*------------
    FOOTER
------------*/

footer {
    height: 70px;
    background-color: #222222;
}

.icons {
    display: flex;
    justify-content: space-between; 
}
footer button {
    padding-top: 15px;
    padding-right: 15px;
    color: white;
    background-color: #222222;
    border: none;
}

.fa-share-from-square {
    color: #4bc800;
}

footer i {
    font-size: 25px;
}

.fa-angle-up {
    line-height: 34px;
    font-size: 10px;
}

.buttons{
    font-size: 12px;
}

#end-button {
    color: red;
    height: 70px;
    line-height: 70px;
    padding: 0px 20px;
    background-color: #4a4a4a;
}

#mic {
    padding-left: 10px;
}

